examples/src/fail_tests/borrowchk_custom_drop.stderr
error[E0597]: `bar` does not live long enough
 --> $DIR/borrowchk_custom_drop.rs:7:1
  |
7 | #[self_referencing]
  | ^^^^^^^^^^^^^^^^^^-
  | |                 |
  | |                 `bar` dropped here while still borrowed
  | |                 borrow might be used here, when `bar` is dropped and runs the `Drop` code for type `Bar`
  | borrowed value does not live long enough
  |
  = note: this error originates in the attribute macro `self_referencing` (in Nightly builds, run with -Z macro-backtrace for more info)
